# Evaluation-of-ChatGPT-on-Information-Extraction

./: .gitignore  .python-version  pyproject.toml  utils.py
1_NER/: analyze_error_types.py  analyze_head_tail.py  config.py  ner_gen_processed_data.py  ner_report_metric.py  ner_test_with_api.py
2_RE/: re_rc_analyze_head_tail.py  re_rc_report_metric.py  re_rc_test_with_api.py  re_triplet_analyze_head_tail.py  re_triplet_report_metric.py  re_triplet_test_with_api.py
3_EE/: ee_argument_analyze_head_tail.py  ee_argument_report_metric.py  ee_argument_test_with_api.py  ee_joint_analyze_head_tail.py  ee_joint_report_metric.py  ee_joint_test_with_api.py  ee_trigger_analyze_head_tail.py  ee_trigger_report_metric.py  ee_trigger_test_with_api.py
4_ABSA/: absa_report_metric.py  absa_test_with_api.py
scripts/ner/: eval.sh
src/: utils.py
